versions/0.22.0/_sources/refs/_aws-cdk_aws-iotanalytics.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"M9vwNGJkNCXHA/AFd0r22k78mhJxWxeISyz6DVmNWNg="}

@aws-cdk/aws-iotanalytics
=========================

.. mdinclude:: ./__aws-cdk_aws-iotanalytics.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.IoTAnalytics/0.22.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.IoTAnalytics" Version="0.22.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.IoTAnalytics --version 0.22.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.IoTAnalytics" version="0.22.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/iotanalytics/0.22.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:iotanalytics:jar:0.22.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="iotanalytics" rev="0.22.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>iotanalytics</artifactId>
           <version>0.22.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:iotanalytics:0.22.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='iotanalytics', version='0.22.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iotanalytics/v/0.22.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iotanalytics@0.22.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iotanalytics": "^0.22.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iotanalytics@0.22.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iotanalytics/v/0.22.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iotanalytics@0.22.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iotanalytics": "^0.22.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iotanalytics@0.22.0



.. py:module:: @aws-cdk/aws-iotanalytics

CfnChannel
^^^^^^^^^^

.. py:class:: CfnChannel(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnChannel;

      .. code-tab:: javascript

         const { CfnChannel } = require('@aws-cdk/aws-iotanalytics');

      .. code-tab:: typescript

         import { CfnChannel } from '@aws-cdk/aws-iotanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-iotanalytics.CfnChannelProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: channelId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iotanalytics.CfnChannelProps`\  *(readonly)*

   .. py:class:: RetentionPeriodProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnChannel.RetentionPeriodProperty;

         .. code-tab:: javascript

            // CfnChannel.RetentionPeriodProperty is an interface

         .. code-tab:: typescript

            import { CfnChannel.RetentionPeriodProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: numberOfDays

         ``CfnChannel.RetentionPeriodProperty.NumberOfDays``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-channel-retentionperiod.html#cfn-iotanalytics-channel-retentionperiod-numberofdays


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: unlimited

         ``CfnChannel.RetentionPeriodProperty.Unlimited``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-channel-retentionperiod.html#cfn-iotanalytics-channel-retentionperiod-unlimited


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnChannelProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnChannelProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnChannelProps;

      .. code-tab:: javascript

         // CfnChannelProps is an interface

      .. code-tab:: typescript

         import { CfnChannelProps } from '@aws-cdk/aws-iotanalytics';





   .. py:attribute:: channelName

      ``AWS::IoTAnalytics::Channel.ChannelName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-channel.html#cfn-iotanalytics-channel-channelname


      :type: string *(optional)*


   .. py:attribute:: retentionPeriod

      ``AWS::IoTAnalytics::Channel.RetentionPeriod``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-channel.html#cfn-iotanalytics-channel-retentionperiod


      :type: :py:class:`~@aws-cdk/aws-iotanalytics.CfnChannel.RetentionPeriodProperty`\  or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: tags

      ``AWS::IoTAnalytics::Channel.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-channel.html#cfn-iotanalytics-channel-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.Tag`\ )[] *(optional)*


CfnDataset
^^^^^^^^^^

.. py:class:: CfnDataset(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnDataset;

      .. code-tab:: javascript

         const { CfnDataset } = require('@aws-cdk/aws-iotanalytics');

      .. code-tab:: typescript

         import { CfnDataset } from '@aws-cdk/aws-iotanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-iotanalytics.CfnDatasetProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: datasetId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iotanalytics.CfnDatasetProps`\  *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.ActionProperty;

         .. code-tab:: javascript

            // CfnDataset.ActionProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.ActionProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: actionName

         ``CfnDataset.ActionProperty.ActionName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-action.html#cfn-iotanalytics-dataset-action-actionname


         :type: string


      .. py:attribute:: containerAction

         ``CfnDataset.ActionProperty.ContainerAction``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-action.html#cfn-iotanalytics-dataset-action-containeraction


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.ContainerActionProperty`\  *(optional)*


      .. py:attribute:: queryAction

         ``CfnDataset.ActionProperty.QueryAction``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-action.html#cfn-iotanalytics-dataset-action-queryaction


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.QueryActionProperty`\  *(optional)*


   .. py:class:: ContainerActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.ContainerActionProperty;

         .. code-tab:: javascript

            // CfnDataset.ContainerActionProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.ContainerActionProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: executionRoleArn

         ``CfnDataset.ContainerActionProperty.ExecutionRoleArn``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-containeraction.html#cfn-iotanalytics-dataset-containeraction-executionrolearn


         :type: string


      .. py:attribute:: image

         ``CfnDataset.ContainerActionProperty.Image``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-containeraction.html#cfn-iotanalytics-dataset-containeraction-image


         :type: string


      .. py:attribute:: resourceConfiguration

         ``CfnDataset.ContainerActionProperty.ResourceConfiguration``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-containeraction.html#cfn-iotanalytics-dataset-containeraction-resourceconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.ResourceConfigurationProperty`\ 


      .. py:attribute:: variables

         ``CfnDataset.ContainerActionProperty.Variables``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-containeraction.html#cfn-iotanalytics-dataset-containeraction-variables


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.VariableProperty`\ )[] *(optional)*


   .. py:class:: DatasetContentVersionValueProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.DatasetContentVersionValueProperty;

         .. code-tab:: javascript

            // CfnDataset.DatasetContentVersionValueProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.DatasetContentVersionValueProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: datasetName

         ``CfnDataset.DatasetContentVersionValueProperty.DatasetName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable-datasetcontentversionvalue.html#cfn-iotanalytics-dataset-variable-datasetcontentversionvalue-datasetname


         :type: string *(optional)*


   .. py:class:: DeltaTimeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.DeltaTimeProperty;

         .. code-tab:: javascript

            // CfnDataset.DeltaTimeProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.DeltaTimeProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: offsetSeconds

         ``CfnDataset.DeltaTimeProperty.OffsetSeconds``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-deltatime.html#cfn-iotanalytics-dataset-deltatime-offsetseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: timeExpression

         ``CfnDataset.DeltaTimeProperty.TimeExpression``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-deltatime.html#cfn-iotanalytics-dataset-deltatime-timeexpression


         :type: string


   .. py:class:: FilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.FilterProperty;

         .. code-tab:: javascript

            // CfnDataset.FilterProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.FilterProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: deltaTime

         ``CfnDataset.FilterProperty.DeltaTime``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-filter.html#cfn-iotanalytics-dataset-filter-deltatime


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.DeltaTimeProperty`\  *(optional)*


   .. py:class:: OutputFileUriValueProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.OutputFileUriValueProperty;

         .. code-tab:: javascript

            // CfnDataset.OutputFileUriValueProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.OutputFileUriValueProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: fileName

         ``CfnDataset.OutputFileUriValueProperty.FileName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable-outputfileurivalue.html#cfn-iotanalytics-dataset-variable-outputfileurivalue-filename


         :type: string *(optional)*


   .. py:class:: QueryActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.QueryActionProperty;

         .. code-tab:: javascript

            // CfnDataset.QueryActionProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.QueryActionProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: sqlQuery

         ``CfnDataset.QueryActionProperty.SqlQuery``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-queryaction.html#cfn-iotanalytics-dataset-queryaction-sqlquery


         :type: string


      .. py:attribute:: filters

         ``CfnDataset.QueryActionProperty.Filters``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-queryaction.html#cfn-iotanalytics-dataset-queryaction-filters


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.FilterProperty`\ )[] *(optional)*


   .. py:class:: ResourceConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.ResourceConfigurationProperty;

         .. code-tab:: javascript

            // CfnDataset.ResourceConfigurationProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.ResourceConfigurationProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: computeType

         ``CfnDataset.ResourceConfigurationProperty.ComputeType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-resourceconfiguration.html#cfn-iotanalytics-dataset-resourceconfiguration-computetype


         :type: string


      .. py:attribute:: volumeSizeInGb

         ``CfnDataset.ResourceConfigurationProperty.VolumeSizeInGB``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-resourceconfiguration.html#cfn-iotanalytics-dataset-resourceconfiguration-volumesizeingb


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:class:: RetentionPeriodProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.RetentionPeriodProperty;

         .. code-tab:: javascript

            // CfnDataset.RetentionPeriodProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.RetentionPeriodProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: numberOfDays

         ``CfnDataset.RetentionPeriodProperty.NumberOfDays``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-retentionperiod.html#cfn-iotanalytics-dataset-retentionperiod-numberofdays


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: unlimited

         ``CfnDataset.RetentionPeriodProperty.Unlimited``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-retentionperiod.html#cfn-iotanalytics-dataset-retentionperiod-unlimited


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:class:: ScheduleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.ScheduleProperty;

         .. code-tab:: javascript

            // CfnDataset.ScheduleProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.ScheduleProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: scheduleExpression

         ``CfnDataset.ScheduleProperty.ScheduleExpression``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-trigger-schedule.html#cfn-iotanalytics-dataset-trigger-schedule-scheduleexpression


         :type: string


   .. py:class:: TriggerProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.TriggerProperty;

         .. code-tab:: javascript

            // CfnDataset.TriggerProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.TriggerProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: schedule

         ``CfnDataset.TriggerProperty.Schedule``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-trigger.html#cfn-iotanalytics-dataset-trigger-schedule


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.ScheduleProperty`\  *(optional)*


      .. py:attribute:: triggeringDataset

         ``CfnDataset.TriggerProperty.TriggeringDataset``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-trigger.html#cfn-iotanalytics-dataset-trigger-triggeringdataset


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.TriggeringDatasetProperty`\  *(optional)*


   .. py:class:: TriggeringDatasetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.TriggeringDatasetProperty;

         .. code-tab:: javascript

            // CfnDataset.TriggeringDatasetProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.TriggeringDatasetProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: datasetName

         ``CfnDataset.TriggeringDatasetProperty.DatasetName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-triggeringdataset.html#cfn-iotanalytics-dataset-triggeringdataset-datasetname


         :type: string


   .. py:class:: VariableProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDataset.VariableProperty;

         .. code-tab:: javascript

            // CfnDataset.VariableProperty is an interface

         .. code-tab:: typescript

            import { CfnDataset.VariableProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: variableName

         ``CfnDataset.VariableProperty.VariableName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable.html#cfn-iotanalytics-dataset-variable-variablename


         :type: string


      .. py:attribute:: datasetContentVersionValue

         ``CfnDataset.VariableProperty.DatasetContentVersionValue``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable.html#cfn-iotanalytics-dataset-variable-datasetcontentversionvalue


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.DatasetContentVersionValueProperty`\  *(optional)*


      .. py:attribute:: doubleValue

         ``CfnDataset.VariableProperty.DoubleValue``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable.html#cfn-iotanalytics-dataset-variable-doublevalue


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: outputFileUriValue

         ``CfnDataset.VariableProperty.OutputFileUriValue``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable.html#cfn-iotanalytics-dataset-variable-outputfileurivalue


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.OutputFileUriValueProperty`\  *(optional)*


      .. py:attribute:: stringValue

         ``CfnDataset.VariableProperty.StringValue``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-dataset-variable.html#cfn-iotanalytics-dataset-variable-stringvalue


         :type: string *(optional)*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnDatasetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnDatasetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnDatasetProps;

      .. code-tab:: javascript

         // CfnDatasetProps is an interface

      .. code-tab:: typescript

         import { CfnDatasetProps } from '@aws-cdk/aws-iotanalytics';





   .. py:attribute:: actions

      ``AWS::IoTAnalytics::Dataset.Actions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-dataset.html#cfn-iotanalytics-dataset-actions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.ActionProperty`\ )[]


   .. py:attribute:: datasetName

      ``AWS::IoTAnalytics::Dataset.DatasetName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-dataset.html#cfn-iotanalytics-dataset-datasetname


      :type: string *(optional)*


   .. py:attribute:: retentionPeriod

      ``AWS::IoTAnalytics::Dataset.RetentionPeriod``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-dataset.html#cfn-iotanalytics-dataset-retentionperiod


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.RetentionPeriodProperty`\  *(optional)*


   .. py:attribute:: tags

      ``AWS::IoTAnalytics::Dataset.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-dataset.html#cfn-iotanalytics-dataset-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.Tag`\ )[] *(optional)*


   .. py:attribute:: triggers

      ``AWS::IoTAnalytics::Dataset.Triggers``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-dataset.html#cfn-iotanalytics-dataset-triggers


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDataset.TriggerProperty`\ )[] *(optional)*


CfnDatastore
^^^^^^^^^^^^

.. py:class:: CfnDatastore(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnDatastore;

      .. code-tab:: javascript

         const { CfnDatastore } = require('@aws-cdk/aws-iotanalytics');

      .. code-tab:: typescript

         import { CfnDatastore } from '@aws-cdk/aws-iotanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-iotanalytics.CfnDatastoreProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: datastoreId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iotanalytics.CfnDatastoreProps`\  *(readonly)*

   .. py:class:: RetentionPeriodProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnDatastore.RetentionPeriodProperty;

         .. code-tab:: javascript

            // CfnDatastore.RetentionPeriodProperty is an interface

         .. code-tab:: typescript

            import { CfnDatastore.RetentionPeriodProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: numberOfDays

         ``CfnDatastore.RetentionPeriodProperty.NumberOfDays``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-datastore-retentionperiod.html#cfn-iotanalytics-datastore-retentionperiod-numberofdays


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: unlimited

         ``CfnDatastore.RetentionPeriodProperty.Unlimited``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-datastore-retentionperiod.html#cfn-iotanalytics-datastore-retentionperiod-unlimited


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnDatastoreProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnDatastoreProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnDatastoreProps;

      .. code-tab:: javascript

         // CfnDatastoreProps is an interface

      .. code-tab:: typescript

         import { CfnDatastoreProps } from '@aws-cdk/aws-iotanalytics';





   .. py:attribute:: datastoreName

      ``AWS::IoTAnalytics::Datastore.DatastoreName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-datastore.html#cfn-iotanalytics-datastore-datastorename


      :type: string *(optional)*


   .. py:attribute:: retentionPeriod

      ``AWS::IoTAnalytics::Datastore.RetentionPeriod``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-datastore.html#cfn-iotanalytics-datastore-retentionperiod


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnDatastore.RetentionPeriodProperty`\  *(optional)*


   .. py:attribute:: tags

      ``AWS::IoTAnalytics::Datastore.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-datastore.html#cfn-iotanalytics-datastore-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.Tag`\ )[] *(optional)*


CfnPipeline
^^^^^^^^^^^

.. py:class:: CfnPipeline(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnPipeline;

      .. code-tab:: javascript

         const { CfnPipeline } = require('@aws-cdk/aws-iotanalytics');

      .. code-tab:: typescript

         import { CfnPipeline } from '@aws-cdk/aws-iotanalytics';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipelineProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: pipelineId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipelineProps`\  *(readonly)*

   .. py:class:: ActivityProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.ActivityProperty;

         .. code-tab:: javascript

            // CfnPipeline.ActivityProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.ActivityProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: addAttributes

         ``CfnPipeline.ActivityProperty.AddAttributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-addattributes


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.AddAttributesProperty`\  *(optional)*


      .. py:attribute:: channel

         ``CfnPipeline.ActivityProperty.Channel``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-channel


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.ChannelProperty`\  *(optional)*


      .. py:attribute:: datastore

         ``CfnPipeline.ActivityProperty.Datastore``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-datastore


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.DatastoreProperty`\  *(optional)*


      .. py:attribute:: deviceRegistryEnrich

         ``CfnPipeline.ActivityProperty.DeviceRegistryEnrich``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-deviceregistryenrich


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.DeviceRegistryEnrichProperty`\  *(optional)*


      .. py:attribute:: deviceShadowEnrich

         ``CfnPipeline.ActivityProperty.DeviceShadowEnrich``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-deviceshadowenrich


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.DeviceShadowEnrichProperty`\  *(optional)*


      .. py:attribute:: filter

         ``CfnPipeline.ActivityProperty.Filter``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-filter


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.FilterProperty`\  *(optional)*


      .. py:attribute:: lambda

         ``CfnPipeline.ActivityProperty.Lambda``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-lambda


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.LambdaProperty`\  *(optional)*


      .. py:attribute:: math

         ``CfnPipeline.ActivityProperty.Math``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-math


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.MathProperty`\  *(optional)*


      .. py:attribute:: removeAttributes

         ``CfnPipeline.ActivityProperty.RemoveAttributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-removeattributes


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.RemoveAttributesProperty`\  *(optional)*


      .. py:attribute:: selectAttributes

         ``CfnPipeline.ActivityProperty.SelectAttributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-activity.html#cfn-iotanalytics-pipeline-activity-selectattributes


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.SelectAttributesProperty`\  *(optional)*


   .. py:class:: AddAttributesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.AddAttributesProperty;

         .. code-tab:: javascript

            // CfnPipeline.AddAttributesProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.AddAttributesProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: attributes

         ``CfnPipeline.AddAttributesProperty.Attributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-addattributes.html#cfn-iotanalytics-pipeline-addattributes-attributes


         :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.AddAttributesProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-addattributes.html#cfn-iotanalytics-pipeline-addattributes-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.AddAttributesProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-addattributes.html#cfn-iotanalytics-pipeline-addattributes-next


         :type: string *(optional)*


   .. py:class:: ChannelProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.ChannelProperty;

         .. code-tab:: javascript

            // CfnPipeline.ChannelProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.ChannelProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: channelName

         ``CfnPipeline.ChannelProperty.ChannelName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-channel.html#cfn-iotanalytics-pipeline-channel-channelname


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.ChannelProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-channel.html#cfn-iotanalytics-pipeline-channel-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.ChannelProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-channel.html#cfn-iotanalytics-pipeline-channel-next


         :type: string *(optional)*


   .. py:class:: DatastoreProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.DatastoreProperty;

         .. code-tab:: javascript

            // CfnPipeline.DatastoreProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.DatastoreProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: datastoreName

         ``CfnPipeline.DatastoreProperty.DatastoreName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-datastore.html#cfn-iotanalytics-pipeline-datastore-datastorename


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.DatastoreProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-datastore.html#cfn-iotanalytics-pipeline-datastore-name


         :type: string *(optional)*


   .. py:class:: DeviceRegistryEnrichProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.DeviceRegistryEnrichProperty;

         .. code-tab:: javascript

            // CfnPipeline.DeviceRegistryEnrichProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.DeviceRegistryEnrichProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: attribute

         ``CfnPipeline.DeviceRegistryEnrichProperty.Attribute``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceregistryenrich.html#cfn-iotanalytics-pipeline-deviceregistryenrich-attribute


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.DeviceRegistryEnrichProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceregistryenrich.html#cfn-iotanalytics-pipeline-deviceregistryenrich-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.DeviceRegistryEnrichProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceregistryenrich.html#cfn-iotanalytics-pipeline-deviceregistryenrich-next


         :type: string *(optional)*


      .. py:attribute:: roleArn

         ``CfnPipeline.DeviceRegistryEnrichProperty.RoleArn``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceregistryenrich.html#cfn-iotanalytics-pipeline-deviceregistryenrich-rolearn


         :type: string *(optional)*


      .. py:attribute:: thingName

         ``CfnPipeline.DeviceRegistryEnrichProperty.ThingName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceregistryenrich.html#cfn-iotanalytics-pipeline-deviceregistryenrich-thingname


         :type: string *(optional)*


   .. py:class:: DeviceShadowEnrichProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.DeviceShadowEnrichProperty;

         .. code-tab:: javascript

            // CfnPipeline.DeviceShadowEnrichProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.DeviceShadowEnrichProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: attribute

         ``CfnPipeline.DeviceShadowEnrichProperty.Attribute``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceshadowenrich.html#cfn-iotanalytics-pipeline-deviceshadowenrich-attribute


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.DeviceShadowEnrichProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceshadowenrich.html#cfn-iotanalytics-pipeline-deviceshadowenrich-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.DeviceShadowEnrichProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceshadowenrich.html#cfn-iotanalytics-pipeline-deviceshadowenrich-next


         :type: string *(optional)*


      .. py:attribute:: roleArn

         ``CfnPipeline.DeviceShadowEnrichProperty.RoleArn``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceshadowenrich.html#cfn-iotanalytics-pipeline-deviceshadowenrich-rolearn


         :type: string *(optional)*


      .. py:attribute:: thingName

         ``CfnPipeline.DeviceShadowEnrichProperty.ThingName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-deviceshadowenrich.html#cfn-iotanalytics-pipeline-deviceshadowenrich-thingname


         :type: string *(optional)*


   .. py:class:: FilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.FilterProperty;

         .. code-tab:: javascript

            // CfnPipeline.FilterProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.FilterProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: filter

         ``CfnPipeline.FilterProperty.Filter``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-filter.html#cfn-iotanalytics-pipeline-filter-filter


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.FilterProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-filter.html#cfn-iotanalytics-pipeline-filter-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.FilterProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-filter.html#cfn-iotanalytics-pipeline-filter-next


         :type: string *(optional)*


   .. py:class:: LambdaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.LambdaProperty;

         .. code-tab:: javascript

            // CfnPipeline.LambdaProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.LambdaProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: batchSize

         ``CfnPipeline.LambdaProperty.BatchSize``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-lambda.html#cfn-iotanalytics-pipeline-lambda-batchsize


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: lambdaName

         ``CfnPipeline.LambdaProperty.LambdaName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-lambda.html#cfn-iotanalytics-pipeline-lambda-lambdaname


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.LambdaProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-lambda.html#cfn-iotanalytics-pipeline-lambda-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.LambdaProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-lambda.html#cfn-iotanalytics-pipeline-lambda-next


         :type: string *(optional)*


   .. py:class:: MathProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.MathProperty;

         .. code-tab:: javascript

            // CfnPipeline.MathProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.MathProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: attribute

         ``CfnPipeline.MathProperty.Attribute``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-math.html#cfn-iotanalytics-pipeline-math-attribute


         :type: string *(optional)*


      .. py:attribute:: math

         ``CfnPipeline.MathProperty.Math``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-math.html#cfn-iotanalytics-pipeline-math-math


         :type: string *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.MathProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-math.html#cfn-iotanalytics-pipeline-math-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.MathProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-math.html#cfn-iotanalytics-pipeline-math-next


         :type: string *(optional)*


   .. py:class:: RemoveAttributesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.RemoveAttributesProperty;

         .. code-tab:: javascript

            // CfnPipeline.RemoveAttributesProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.RemoveAttributesProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: attributes

         ``CfnPipeline.RemoveAttributesProperty.Attributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-removeattributes.html#cfn-iotanalytics-pipeline-removeattributes-attributes


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.RemoveAttributesProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-removeattributes.html#cfn-iotanalytics-pipeline-removeattributes-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.RemoveAttributesProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-removeattributes.html#cfn-iotanalytics-pipeline-removeattributes-next


         :type: string *(optional)*


   .. py:class:: SelectAttributesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoTAnalytics;

         .. code-tab:: java

            import software.amazon.awscdk.services.iotanalytics.CfnPipeline.SelectAttributesProperty;

         .. code-tab:: javascript

            // CfnPipeline.SelectAttributesProperty is an interface

         .. code-tab:: typescript

            import { CfnPipeline.SelectAttributesProperty } from '@aws-cdk/aws-iotanalytics';





      .. py:attribute:: attributes

         ``CfnPipeline.SelectAttributesProperty.Attributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-selectattributes.html#cfn-iotanalytics-pipeline-selectattributes-attributes


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


      .. py:attribute:: name

         ``CfnPipeline.SelectAttributesProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-selectattributes.html#cfn-iotanalytics-pipeline-selectattributes-name


         :type: string *(optional)*


      .. py:attribute:: next

         ``CfnPipeline.SelectAttributesProperty.Next``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iotanalytics-pipeline-selectattributes.html#cfn-iotanalytics-pipeline-selectattributes-next


         :type: string *(optional)*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnPipelineProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnPipelineProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoTAnalytics;

      .. code-tab:: java

         import software.amazon.awscdk.services.iotanalytics.CfnPipelineProps;

      .. code-tab:: javascript

         // CfnPipelineProps is an interface

      .. code-tab:: typescript

         import { CfnPipelineProps } from '@aws-cdk/aws-iotanalytics';





   .. py:attribute:: pipelineActivities

      ``AWS::IoTAnalytics::Pipeline.PipelineActivities``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-pipeline.html#cfn-iotanalytics-pipeline-pipelineactivities


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iotanalytics.CfnPipeline.ActivityProperty`\ )[]


   .. py:attribute:: pipelineName

      ``AWS::IoTAnalytics::Pipeline.PipelineName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-pipeline.html#cfn-iotanalytics-pipeline-pipelinename


      :type: string *(optional)*


   .. py:attribute:: tags

      ``AWS::IoTAnalytics::Pipeline.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iotanalytics-pipeline.html#cfn-iotanalytics-pipeline-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.Tag`\ )[] *(optional)*


